# haskell-outofoffice

./: README.md  outofoffice.cabal  stack.yaml
src/: DateArgs.hs  Main.hs
