name:                outofoffice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/outofoffice#readme
license:             GPL-3
license-file:        LICENSE
author:              Kate Haskell
maintainer:          fuzzcat@bactroid.net
copyright:           2018 Kate Haskell
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable outofoffice
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       DateArgs
  build-depends:       base >= 4.7 && < 5
                     , time (>= 1.9)
                     , template
                     , text
                     , containers
                     , bytestring
