name:                outofoffice
version:             0.1.0.0
description:         A small utility for generating outofoffice messages when I'm on leave
homepage:            https://github.com/bactroid/haskell-outofoffice#readme
license:             GPL-3
license-file:        LICENSE
author:              Kate Haskell
maintainer:          fuzzcat@bactroid.net
copyright:           2018 Kate Haskell
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable outofoffice
  hs-source-dirs:      src
  ghc-options:         -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       DateArgs
  build-depends:       base >= 4.7 && < 5
                     , time (>= 1.9)
                     , template
                     , text
                     , containers
                     , bytestring
